...
                    
                    Button {
                        self.coordinator.trigger(.signinWithEmail)
                    } label: {
                        HStack{
                            Image("icEmail")
                            Text("Contectar con correo")
                                .foregroundColor(.black)
                                .bold()
                        }
                    }
                    .buttonStyle(Rounded(color: .white))
                    
...
